--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "http-errors": "^2.0.0",
     "prettier": "^3.2.5"
-  }
+  },
+  "type": "module"
 }
