--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -18,6 +19,5 @@
     "fs": "^0.0.1-security",
     "http-errors": "^2.0.0",
     "prettier": "^3.2.5"
-  },
-  "type": "module"
+  }
 }
